# srt-hunter

./: .gitignore  LICENSE  README.md  build.bat  build.sh  config.ini-sample  gui_app.py  main.py  pyproject.toml  requirements.txt  srt_automation.py  update_version.py  version.py
.github/workflows/: build.yml  release.yml
build-script/: build.py  build_macos.sh  build_windows.bat  icon_converter.py
docs/: development.md
legacy/: gui_app.py  srt_automation.py
