[tool.poetry]
name = "srt-hunter"
version = "0.1.0"
description = "SRT auto booking"
authors = ["faith6"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
selenium = "^4.27.1"
pyautogui = "^0.9.54"
webdriver-manager = "^4.0.2"
pyqt6 = "^6.8.0"
qdarkstyle = "^3.2.3"
pyinstaller = "^6.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
