[tool.poetry]
name = "srt-hunter"
version = "1.3.3"
description = "SRT auto booking with improved payment completion detection"
authors = ["faith6"]
readme = "README.md"
package-mode = false

# packages 설정 제거
# packages = [
#     { include = "srt_hunter" }
# ]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
selenium = "^4.27.1"
pyautogui = "^0.9.54"
webdriver-manager = "^4.0.2"
pyqt6 = "^6.8.0"
qdarkstyle = "^3.2.3"
pyinstaller = "^6.11.1"
cryptography = "^44.0.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
